--- a/style/index.css
+++ b/style/index.css
@@ -16,3 +16,48 @@ body
 	width: 100vw;
 	height: 100vh;
 }
+
+#flex_nav
+{
+    width: 70%;
+    height: 10%;
+    position: absolute;
+    left: calc(50% - 35%);
+    top: calc(50% - 10%);
+    
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-content: space-between;
+    -ms-flex-line-pack: justify;
+    align-content: space-between;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+#flex_nav > input[type="button"]
+{
+    height: 75px;
+    margin: 10px;
+    font-size: 16pt;
+    
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+}
